--- a/po/bs.po
+++ b/po/bs.po
@@ -1464,7 +1464,7 @@ msgstr ""
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 
@@ -1494,7 +1494,7 @@ msgstr ""
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 
 #: src/configure.c:254
@@ -1997,7 +1997,7 @@ msgstr ""
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr ""
 
 #: src/errors.c:103
@@ -2736,7 +2736,7 @@ msgstr ""
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 
 #: src/processarc.c:161
@@ -3102,7 +3102,7 @@ msgstr ""
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 
