--- a/po/ca.po
+++ b/po/ca.po
@@ -1571,7 +1571,7 @@ msgstr "problemes de dependències - es deixa sense configurar"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problemes de dependències, però es configurarà igualment tal i com "
@@ -1606,7 +1606,7 @@ msgstr "no es pot fer «stat» sobre el conffile «%.250s» actualment instal·l
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "El conffile «%s» no existeix en el sistema.\n"
@@ -2182,7 +2182,7 @@ msgstr "Procés aturat per haver-hi massa errors.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr ""
 "El paquet %s estava en mantindre, es processarà igualment tal com heu "
 "demanat\n"
@@ -3143,7 +3143,7 @@ msgstr "Ha fallat la verificació del paquet %s!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Ha fallat la verificació del paquet %s,\n"
 "però s'instal·larà igualment tal i com heu demanat.\n"
@@ -3571,7 +3571,7 @@ msgstr "problemes de dependències - no es desinstal·la"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problemes de dependències, però es desinstal·larà igualment tal i "
