--- a/po/cs.po
+++ b/po/cs.po
@@ -1528,7 +1528,7 @@ msgstr "problém se závislostmi - nechávám nezkonfigurované"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problém se závislostmi, ale přesto konfiguruji podle vašeho "
@@ -1564,7 +1564,7 @@ msgstr "stav aktuálního konfiguračního souboru `%.250s' nelze zjistit"
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Konfigurační soubor `%s' ve Vašem systému neexistuje.\n"
@@ -2128,7 +2128,7 @@ msgstr "Zpracování zastaveno, protože došlo k příliš mnoha chybám.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr ""
 "Balík %s byl ve stavu hold, ale přesto bude provedena požadovaná akce\n"
 
@@ -3021,7 +3021,7 @@ msgstr "Kontrola balíku %s selhala!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Kontrola podpisu balíku %s selhala,\n"
 "ale přesto instaluji.\n"
@@ -3437,7 +3437,7 @@ msgstr "problém se závislostmi - neodinstalovávám"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problém se závislostmi, ale odstraňuji podle požadavku:\n"
