--- a/po/de.po
+++ b/po/de.po
@@ -1551,7 +1551,7 @@ msgstr "Abhängigkeitsprobleme - lasse es unkonfiguriert"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: Abhängigkeitsprobleme, aber konfiguriere trotzdem wie gewünscht:\n"
@@ -1585,7 +1585,7 @@ msgstr "Kann kein stat auf derzeit installiertes Conffile »%.250s« durchführe
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Konfigurationsdatei »%s« existiert auf dem System nicht.\n"
@@ -2156,7 +2156,7 @@ msgstr "Bearbeitung wurde angehalten, da zu viele Fehler auftraten.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr "Paket %s war auf »halten«, bearbeite wie gewünscht dennoch\n"
 
 #: src/errors.c:103
@@ -3080,7 +3080,7 @@ msgstr "Überprüfung von Paket %s fehlgeschlagen!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Überprüfung von Paket %s fehlgeschlagen,\n"
 " aber installiere trotzdem, wie Sie gefordert haben.\n"
@@ -3503,7 +3503,7 @@ msgstr "Abhängigkeitsprobleme - entferne nicht"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: Abhängigkeitsprobleme, aber entferne es auf Anfrage dennoch:\n"
