--- a/po/es.po
+++ b/po/es.po
@@ -1619,7 +1619,7 @@ msgstr "problemas de dependencias - se deja sin configurar"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problemas de dependencias, pero se configurará de todas formas\n"
@@ -1655,7 +1655,7 @@ msgstr ""
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "El conffile `%s' no existe en el sistema.\n"
@@ -2239,7 +2239,7 @@ msgstr "Proceso detenido por haber demasiados errores.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr ""
 "El paquete %s estaba mantenido, se procesará de cualquier forma\n"
 "como se ha solicitado\n"
@@ -3209,7 +3209,7 @@ msgstr "¡Falló la verificación del paquete %s!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Falló la verificación del paquete %s,\n"
 "pero se instalará de todas formas tal como se ha solicitado\n"
@@ -3654,7 +3654,7 @@ msgstr "problemas de dependencias - no se desinstala"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problemas de dependencias, pero se desinstalará de todas formas\n"
