--- a/po/eu.po
+++ b/po/eu.po
@@ -1553,7 +1553,7 @@ msgstr "mendekotasun arazoak - konfiguratu gabe uzten ari da"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: mendekotasun arazoak, baina eskatu bezala konfiguratuko da:\n"
@@ -1587,7 +1587,7 @@ msgstr "ezin da atzitu instalatuta dagoen `%.250s' conffile-a"
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "`%s' konfigurazio fitxategia ez dago sisteman.\n"
@@ -2153,7 +2153,7 @@ msgstr "Prozesua geldiarazi da errore gehiegi zeudelako.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr "%s paketea atxikitzeko zen, baina zuk eskatu bezala prozesatuko da\n"
 
 #: src/errors.c:103
@@ -3076,7 +3076,7 @@ msgstr "Huts egin du %s paketea egiaztatzean!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Huts egin du %s paketea egiaztatzean,\n"
 "baina eskatu bezala instalatuko da.\n"
@@ -3498,7 +3498,7 @@ msgstr "mendekotasun arazoak - ez da kenduko"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: mendekotasun arazoak, baina eskatu bezala kenduko da:\n"
