--- a/po/fr.po
+++ b/po/fr.po
@@ -1611,7 +1611,7 @@ msgstr "problèmes de dépendances - laissé non configuré"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg : %s : problèmes de dépendances, mais configuration comme demandé :\n"
@@ -1646,7 +1646,7 @@ msgstr "impossible d'analyser le conffile actuellement installé « %.250s »"
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Le fichier de configuration « %s » n'existe pas sur le système.\n"
@@ -2228,7 +2228,7 @@ msgstr "L'exécution a été arrêtée car il y avait trop d'erreurs.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr ""
 "Le paquet %s était à garder (on hold), traitement en cours malgré tout comme "
 "demandé\n"
@@ -3216,7 +3216,7 @@ msgstr "La vérification du paquet %s a échoué."
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "La vérification du paquet %s a échoué, mais traitement en cours malgré tout\n"
 "comme demandé.\n"
@@ -3646,7 +3646,7 @@ msgstr "problème de dépendance - suppression ignorée"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg : %s : problème de dépendance, mais suppression comme demandé :\n"
