--- a/po/id.po
+++ b/po/id.po
@@ -1538,7 +1538,7 @@ msgstr "ada masalah ketergantungan - biarkan tidak dikonfigurasi"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: ada masalah ketergantungan, namun tetap dikonfigurasi sesuai "
@@ -1573,7 +1573,7 @@ msgstr "tidak bisa melakukan 'stat' conffile `%.250s' yang telah dipasang"
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Berkas konfigurasi `%s' tidak ada pada sistem. \n"
@@ -2135,7 +2135,7 @@ msgstr "Pemrosesan dihentikan karena terlalu banyak kesalahan.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr "Paket %s telah dicekal, tetap memproses sesuai permintaan\n"
 
 #: src/errors.c:103
@@ -2967,7 +2967,7 @@ msgstr "Pemeriksaan paket %s gagal!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Verifikasi paket %s gagal,\n"
 "tetapi tetap memasangnya sesuai permintaan.\n"
@@ -3391,7 +3391,7 @@ msgstr "ada masalah ketergantungan - tidak dibuang"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: ada masalah ketergantungan, namun tetap membuangnya sesuai "
