--- a/po/ja.po
+++ b/po/ja.po
@@ -1567,7 +1567,7 @@ msgstr "依存関係の問題 - 設定を見送ります"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: 依存関係の問題、しかし要求どおり設定を行います:\n"
@@ -1602,7 +1602,7 @@ msgstr ""
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "設定ファイル `%s' がシステムに存在しません。\n"
@@ -2177,7 +2177,7 @@ msgstr "大量のエラーが発生したため、処理が停止しました。
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr "パッケージ %s は保持されていますが、要求どおり処理します\n"
 
 #: src/errors.c:103
@@ -3087,7 +3087,7 @@ msgstr "パッケージ %s の検証に失敗しました!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "パッケージ %s の検証に失敗しましたが、\n"
 "要求どおりインストールを行います。\n"
@@ -3514,7 +3514,7 @@ msgstr "依存関係の問題 - 削除しません"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: 依存関係に問題があります。しかし要求に従い削除しています:\n"
