--- a/po/ku.po
+++ b/po/ku.po
@@ -1469,7 +1469,7 @@ msgstr "pirsgirêkên girêdanbûnê - bê veavakirinê dimîne"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: pirsgirêkên girêdanbûnê hene, lê li gorî xwesteka te tê "
@@ -1502,7 +1502,7 @@ msgstr ""
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 
 #: src/configure.c:254
@@ -2019,7 +2019,7 @@ msgstr ""
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr ""
 
 #: src/errors.c:103
@@ -2753,7 +2753,7 @@ msgstr ""
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 
 #: src/processarc.c:161
@@ -3124,7 +3124,7 @@ msgstr "pirsgirêkên bindestiyê - nayê rakirin"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: pirsgirêkên girêdayîbûnê, lê ser daxwaza te tê rakirin:\n"
