--- a/po/lt.po
+++ b/po/lt.po
@@ -1514,7 +1514,7 @@ msgstr "priklausomybių problemos - paliekamas nekonfigūruotas"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: priklausomybių problemos, tačiau vis vien konfigūruojama, nes buvo "
@@ -1549,7 +1549,7 @@ msgstr "nepavyko patikrinti naujai įdiegtos konfigūracijos failo „%.250s“"
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Konfigūracijos failas „%s“ sistemoje neegzistuoja.\n"
@@ -2104,7 +2104,7 @@ msgstr "Procesas buvo sustabdytas, dėl didelio klaidų kiekio.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr "Paketas %s buvo sustabdytas, tačiau yra apdorojamas kaip nurodyta\n"
 
 #: src/errors.c:103
@@ -2977,7 +2977,7 @@ msgstr "Paketo %s tikrinimas nepavyko!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Paketo %s tikrinimas nepavyko,\n"
 "tačiau diegiu kaip nurodyta.\n"
@@ -3406,7 +3406,7 @@ msgstr "priklausomybių problemos - nešalinamas"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: priklausomybių problemos, tačiau šalinamas, nes taip nurodyta:\n"
