--- a/po/nn.po
+++ b/po/nn.po
@@ -1529,7 +1529,7 @@ msgstr "kravproblem - set ikkje opp pakken"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: Kravproblem, men set opp likevel sidan du ønskjer det:\n"
@@ -1563,7 +1563,7 @@ msgstr "fann ikkje den installerte oppsettsfila «%.250s»"
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Oppsettsfila «%s» finst ikkje på systemet.\n"
@@ -2127,7 +2127,7 @@ msgstr "Behandlinga vart stoppa på grunn av for mange feil.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr ""
 "Pakken %s var halden tilbake, men blir behandla likevel sidan du ønskjer "
 "det\n"
@@ -2963,7 +2963,7 @@ msgstr "Stadfestinga av %s mislukkast."
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Stadfestinga av %s mislukkast,\n"
 "men installerer likevel sidan du ønskjer det.\n"
@@ -3384,7 +3384,7 @@ msgstr "kravproblem - fjernar ikkje"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: Kravproblem, men fjernar likevel sidan du ønskjer det:\n"
