--- a/po/pa.po
+++ b/po/pa.po
@@ -1472,7 +1472,7 @@ msgstr ""
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 
@@ -1502,7 +1502,7 @@ msgstr ""
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 
 #: src/configure.c:254
@@ -2005,7 +2005,7 @@ msgstr ""
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr ""
 
 #: src/errors.c:103
@@ -2851,7 +2851,7 @@ msgstr "ਪੈਕੇਜ %s ਦੀ ਜਾਂਚ ਫੇਲ੍ਹ ਹੋਈ!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "ਪੈਕੇਜ %s ਦੀ ਜਾਂਚ ਫੇਲ੍ਹ ਹੋਈ\n"
 "ਪਰ ਤੁਹਾਡੀ ਮੰਗ ਅਨੁਸਾਰ ਇੰਸਟਾਲ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ।\n"
@@ -3236,7 +3236,7 @@ msgstr ""
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 
