--- a/po/pl.po
+++ b/po/pl.po
@@ -1579,7 +1579,7 @@ msgstr "problemy z zależnościami - pozostawiony nieskonfigurowany"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problemy z zależnościami, ale zostanie skonfigurowany według "
@@ -1614,7 +1614,7 @@ msgstr "nie można ustalić stanu aktualnego pliku konfiguracyjnego \"%.250s\""
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Plik konfiguracyjny \"%s\" nie istnieje w systemie.\n"
@@ -2196,7 +2196,7 @@ msgstr ""
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr "Pakiet %s został wstrzymany, zostanie przetworzony według żądania\n"
 
 #: src/errors.c:103
@@ -3108,7 +3108,7 @@ msgstr "Sprawdzenie pakietu %s nie powiodło się!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Nie udało się sprawdzić pakietu %s,\n"
 "ale zostanie zainstalowany według żądania\n"
@@ -3536,7 +3536,7 @@ msgstr "problemy z zależnościami - nie będzie usuwany"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problemy z zależnościami, usuwanie według żądania:\n"
