--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1558,7 +1558,7 @@ msgstr "problemas de dependência - deixando desconfigurado"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problemas de dependência, mas configurando assim mesmo como "
@@ -1597,7 +1597,7 @@ msgstr ""
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "O arquivo de configuração '%s' não existe no sistema.\n"
@@ -2174,7 +2174,7 @@ msgstr "Processamento parou porque havia muitos erros.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr "Pacote %s estava sendo retido, processando-o assim mesmo como pedido\n"
 
 #: src/errors.c:103
@@ -3105,7 +3105,7 @@ msgstr "Verificação no pacote %s falhou!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Verificação no pacote %s falhou,\n"
 "mas o instalarei de qualquer forma como você requisitou.\n"
@@ -3532,7 +3532,7 @@ msgstr "problemas de dependência - não removendo"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problemas de dependência, mas removendo assim mesmo conforme "
