--- a/po/sk.po
+++ b/po/sk.po
@@ -1544,7 +1544,7 @@ msgstr "problémy so závislosťami - po necháva sa nenakonfigurované"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problémy so závislosťami, napriek tomu sa konfiguruje podľa vašej "
@@ -1580,7 +1580,7 @@ msgstr "nie je možné zistiť stav aktuálneho konfiguračného súboru „%.25
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Konfiguračný súbor „%s“ v systéme neexistuje.\n"
@@ -2148,7 +2148,7 @@ msgstr "Spracovanie bolo zastavené, pretože sa vyskytlo príliš veľa chýb.\
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr ""
 "Balík %s bol v stave podržaný, napriek tomu sa vykonaná operácia, ktorú ste "
 "požadovali\n"
@@ -3060,7 +3060,7 @@ msgstr "Verifikácia balíka %s zlyhala!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Verifikácia balíka %s zlyhala,\n"
 "napriek tomu sa inštaluje podľa vašej požiadavky.\n"
@@ -3473,7 +3473,7 @@ msgstr "problémy so závislosťami - neodstraňuje sa"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problémy so závislosťami, ale odstraňuje sa podľa požiadavky:\n"
