--- a/po/sv.po
+++ b/po/sv.po
@@ -1535,7 +1535,7 @@ msgstr "beroendeproblem - lämnar okonfigurerad"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: beroendeproblem, men konfigurerar ändå enligt önskemål:\n"
@@ -1569,7 +1569,7 @@ msgstr "kunde inte ta status på nu installerad konfigurationsfil \"%.250s\""
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Konfigurationsfilen \"%s\" existerar inte på ditt system.\n"
@@ -2131,7 +2131,7 @@ msgstr "Hanteringen avbröts då för många fel uppstod.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr "Paketet %s skulle kvarhållas, men hanteras ändå enligt önskemål\n"
 
 #: src/errors.c:103
@@ -3012,7 +3012,7 @@ msgstr "Verifiering av paket %s misslyckades!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Verifiering av paket %s misslyckades,\n"
 "men installerar ändå enligt önskemål.\n"
@@ -3427,7 +3427,7 @@ msgstr "beroendeproblem - tar inte bort"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: beroendeproblem, men tar bort ändå enligt önskemål:\n"
