--- a/po/da.po
+++ b/po/da.po
@@ -1527,7 +1527,7 @@ msgstr "afhængighedsproblemer - efterlader den ukonfigureret"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: afhængighedsproblemer, men konfigurerer alligevel, som du "
@@ -1562,7 +1562,7 @@ msgstr "kunne ikke finde den installerede medsendte konfigurationsfil '%.250s'"
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Konfigurationsfilen '%s' eksisterer ikke på systemet.\n"
@@ -2128,7 +2128,7 @@ msgstr "Behandlingen blev stoppet fordi der var for mange fejl.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr "Pakken %s var tilbageholdt, behandler den alligevel, efter dit ønske\n"
 
 #: src/errors.c:103
@@ -3036,7 +3036,7 @@ msgstr "Verifikation af %s mislykkedes!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Verifikation af %s mislykkedes,\n"
 "man installerer alligevel, efter dit ønske.\n"
@@ -3457,7 +3457,7 @@ msgstr "afhængighedsproblemer - afinstallerer ikke"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: afhængighedsproblemer, men afinstallerer efter dit ønske "
