--- a/po/dpkg.pot
+++ b/po/dpkg.pot
@@ -1463,7 +1463,7 @@ msgstr ""
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 
@@ -1493,7 +1493,7 @@ msgstr ""
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 
 #: src/configure.c:254
@@ -1994,7 +1994,7 @@ msgstr ""
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr ""
 
 #: src/errors.c:103
@@ -2726,7 +2726,7 @@ msgstr ""
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 
 #: src/processarc.c:161
@@ -3092,7 +3092,7 @@ msgstr ""
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 
