--- a/po/et.po
+++ b/po/et.po
@@ -1489,7 +1489,7 @@ msgstr "sõltuvusprobleemid - jäetakse seadistamata"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: sõltuvusprobleemid, kuid vastavalt nõudmisele seadistatakse "
@@ -1524,7 +1524,7 @@ msgstr ""
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 
 #: src/configure.c:254
@@ -2047,7 +2047,7 @@ msgstr "Töötlemine katkestati liiga suure vigade hulga tõttu.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr ""
 
 #: src/errors.c:103
@@ -2823,7 +2823,7 @@ msgstr "Tõrge paki %s verifitseerimisel"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Paki %s verifitseerimine ei õnnestunud,\n"
 "kuid Sinu nõudmisel paigaldatakse see ikkagi.\n"
@@ -3219,7 +3219,7 @@ msgstr "sõltuvusprobleemid - ei eemaldata"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: sõltuvusprobleemid, kuid vastavalt nõudmisele eemaldatakse "
