--- a/po/hu.po
+++ b/po/hu.po
@@ -1510,7 +1510,7 @@ msgstr "függőségi hibák - e csomag beállítatlan maradt"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: függőségi hibák, mégis konfigurálom, mert ezt akartad:\n"
@@ -1544,7 +1544,7 @@ msgstr "nem érhető el a jelenleg telepített beállítófájl: %.250s"
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Nincs `%s' beállító fájl a rendszeren.\n"
@@ -2101,7 +2101,7 @@ msgstr "A feldolgozás túl sok hiba miatt leállt.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr "%s vissza volt fogva, de kérésedre mégis feldolgozom\n"
 
 #: src/errors.c:103
@@ -3012,7 +3012,7 @@ msgstr "%s csomag hitelesítése meghiúsult!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "%s csomag hitelesítése meghiúsult,\n"
 "de telepítem, mert így akartad.\n"
@@ -3424,7 +3424,7 @@ msgstr "függőségek vannak - nem törlöm"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: függőségi gondok vannak, de kérésedre törlöm:\n"
