--- a/po/it.po
+++ b/po/it.po
@@ -1578,7 +1578,7 @@ msgstr "problemi con le dipendenze - lasciato non configurato"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problemi con le dipendenze, ma configuro comunque come richiesto:\n"
@@ -1614,7 +1614,7 @@ msgstr ""
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Il file di configurazione `%s' non esiste nel sistema.\n"
@@ -2194,7 +2194,7 @@ msgstr ""
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr ""
 "Il pacchetto %s era bloccato, viene processato comunque come richiesto\n"
 
@@ -3132,7 +3132,7 @@ msgstr "Verifica del pacchetto %s fallita!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Verifica del pacchetto %s fallita,\n"
 "ma lo installo lo stesso come richiesto.\n"
@@ -3566,7 +3566,7 @@ msgstr "problemi con le dipendenze - rimozione non effettuata"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problemi con le dipendenze, ma lo rimuovo comunque come "
