--- a/po/ko.po
+++ b/po/ko.po
@@ -1545,7 +1545,7 @@ msgstr "의존성 문제 - 설정하지 않고 남겨둠"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: 의존성 문제, 하지만 요청한 대로 어쨌든 설정합니다:\n"
@@ -1579,7 +1579,7 @@ msgstr "현재 설치된 설정 파일, `%.250s' 파일의 정보를 읽을 수 
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "`%s' 설정 파일은 시스템에 없습니다.\n"
@@ -2141,7 +2141,7 @@ msgstr "오류가 너무 많아 처리를 중단했습니다.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr "%s 패키지는 고정 상태였지만, 요청한 대로 처리합니다.\n"
 
 #: src/errors.c:103
@@ -3046,7 +3046,7 @@ msgstr "%s 패키지 확인이 실패했습니다!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "%s 패키지 확인이 실패했습니다,\n"
 "하지만 요청한 대로 설치합니다.\n"
@@ -3469,7 +3469,7 @@ msgstr "의존성 문제 - 지우지 않습니다"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: 의존성 문제가 있지만, 어쨌든 요청한 대로 지웁니다:\n"
