--- a/po/nl.po
+++ b/po/nl.po
@@ -1535,7 +1535,7 @@ msgstr "vereistenproblemen - blijft ongeconfigureerd"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: vereistenproblemen, maar wordt toch geconfigureerd zoals "
@@ -1572,7 +1572,7 @@ msgstr ""
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Configuratiebestand `%s' bestaat niet op het systeem.\n"
@@ -2145,7 +2145,7 @@ msgstr "Afhandeling werd afgebroken omdat er te veel fouten waren.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr "Pakket %s was on hold, wordt toch behandeld zoals gevraagd\n"
 
 #: src/errors.c:103
@@ -3061,7 +3061,7 @@ msgstr "Verificatie van pakket %s is mislukt!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Verificatie van pakket %s is mislukt,\n"
 "maar wordt toch geïnstalleerd zoals gevraagd.\n"
@@ -3480,7 +3480,7 @@ msgstr "vereistenproblemen - niet verwijderd"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: vereistenproblemen, maar wordt op verzoek toch verwijderd:\n"
