--- a/po/tl.po
+++ b/po/tl.po
@@ -1548,7 +1548,7 @@ msgstr "problema sa dependensiya - iniwanang hindi nakaayos"
 #: src/configure.c:135
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but configuring anyway as you request:\n"
+"dpkg: %s: dependency problems, but configuring anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problema sa dependensiya, pero isinasaayos rin tulad ng hiling "
@@ -1583,7 +1583,7 @@ msgstr "hindi ma-stat ang kasalukuyang nakaluklok na conffile `%.250s'"
 msgid ""
 "\n"
 "Configuration file `%s', does not exist on system.\n"
-"Installing new config file as you request.\n"
+"Installing new config file as you requested.\n"
 msgstr ""
 "\n"
 "Ang talaksang pagkaayos `%s' ay wala sa sistema.\n"
@@ -2153,7 +2153,7 @@ msgstr "Hininto ang pagproseso dahil labis ang dami ng mga error.\n"
 
 #: src/errors.c:99
 #, c-format
-msgid "Package %s was on hold, processing it anyway as you request\n"
+msgid "Package %s was on hold, processing it anyway as you requested\n"
 msgstr ""
 "Ang paketeng %s ay naka-hold, pinoproseso pa rin dahil sa inyong hiling\n"
 
@@ -3016,7 +3016,7 @@ msgstr "Bigo ang pagtiyak sa paketeng %s!"
 #, c-format
 msgid ""
 "Verification on package %s failed,\n"
-"but installing anyway as you request.\n"
+"but installing anyway as you requested.\n"
 msgstr ""
 "Bigo ang pagtiyak sa paketeng %s,\n"
 "ngunit iluluklok pa rin tulad ng inyong hiling.\n"
@@ -3458,7 +3458,7 @@ msgstr "problema sa dependensiya - hindi tatanggalin"
 #: src/remove.c:130
 #, c-format
 msgid ""
-"dpkg: %s: dependency problems, but removing anyway as you request:\n"
+"dpkg: %s: dependency problems, but removing anyway as you requested:\n"
 "%s"
 msgstr ""
 "dpkg: %s: problema sa dependensiya, pero tatanggalin din dahil inyong "
